style folder name corrected

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-Helal</title>
 
-    <link rel="stylesheet" href="style.css/style.css">
+    <link rel="stylesheet" href="style/style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,7 +31,6 @@
         </header>
 
 
-
         <!-- section 1 About Mohammad Helal Uddin -->
         <section class="section1-helal">
             <div class="helal-iamge">
@@ -48,7 +47,6 @@
             </div>
 
         </section>
-
 
         <!-- section My failures of my previous year -->
 
@@ -81,9 +79,7 @@
             </h1>
         </div>
 
-
         <!-- section 3 My plans -->
-
 
         </section> -->
 
